# duckdb-extension-cronjob

./: .gitmodules  CMakeLists.txt  Makefile  README.md  extension_config.cmake
.github/workflows/: MainDistributionPipeline.yml
scripts/: setup-custom-toolchain.sh
src/: cronjob_extension.cpp
src/include/: cronjob_extension.hpp
test/sql/: cronjob.test
